static/css/components/container.css
.demo {
  border: 1px solid var(--sy-c-border);
  border-radius: 6px;
}

.demo-code .highlight > pre {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.demo-result {
  padding: 1rem;
}

.container.image-1,
.container.video-1 {
  border: 0.5rem solid var(--accent-a3);
  border-radius: 6px;
}

.container.image-1 > img {
  border-radius: 4px;
  margin: 0;
}

.container.video-1 video,
.container.video-1 iframe {
  border-radius: 4px;
  width: 100%;
  margin: 0;
}

.container.image-2,
.container.video-2 {
  border: 1px solid var(--sy-c-border);
  padding: 1rem;
  border-radius: 6px;
}

.container.image-2 > img,
.container.video-2 > video {
  margin: 0;
}

.container.buttons {
  margin: 2rem 0 4.2rem;
}
.container.buttons > p {
  display: flex;
  gap: 1rem;
}
.container.buttons a {
  display: inline-block;
  padding: 0 2rem;
  line-height: 2.6rem;
  border-radius: 2.6rem;
  border: 2px solid var(--sy-c-border);
  font-weight: 600;
  background-color: var(--sy-c-surface);
  transition: all 0.2s ease;
}
.container.buttons a:first-child {
  color: var(--accent-contrast);
  background-color: var(--accent-9);
  border-color: var(--accent-9);
}
.container.buttons a:hover {
  color: var(--sy-c-bold);
  border-color: var(--accent-9);
  background-color: var(--sy-c-background);
}

.container.rounded-image img {
  border-radius: 99999px;
}

